--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fastify-plugin": "^3.0.0",
     "fastify-postgres": "^3.5.0",
     "fastify-swagger": "^4.8.0",
+    "moment": "^2.29.1",
     "pg": "^8.6.0",
     "pino-pretty": "^5.0.2"
   },
