--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "ajv": "^8.6.2",
     "bcryptjs": "^2.4.3",
     "fastify": "^3.18.0",
     "fastify-env": "^2.1.1",
     "fastify-jwt": "^3.0.0",
+    "fastify-multipart": "^4.0.7",
     "fastify-plugin": "^3.0.0",
     "fastify-postgres": "^3.5.0",
     "fastify-swagger": "^4.8.0",
@@ -14,7 +16,6 @@
   "name": "new-server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
